--- a/app/views/globalView/_globalView.scss
+++ b/app/views/globalView/_globalView.scss
@@ -4,7 +4,7 @@
 
 .router-list {
   display: inline;
-  line-height: 5rem;
+  line-height: 3rem;
   font-family: 'CiscoSans';
   text-transform: uppercase;
   .pgtitle {
